books_exchange/public/css/style.css
/* ... */
main>aside {
    background-color: #F7F7F7;
    border: 0.8em solid #F7F7F7;
    border-radius: 0.5rem;
}

#searchForm {
    background-color: #FFF;
    border-radius: 0.5rem;
    padding: 5px;
}

#searchForm button {
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    color: #CD4109;
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    user-select: none;
    background-color: transparent;
    border: 1px solid transparent;
    border-color: #CD4109;
    padding: .375rem .75rem;
    font-size: 1rem;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
    width: 100%;
}

#searchForm button:hover {
    color: #fff;
    background-color: #CD4109;
    border-color: #CD4109;
}

#resultSearch {
    margin-top: 1rem;
}

div#resultSearch>a>table.table.responsive-table-line.table-hover {
    margin: 0;
}

.informationAboutTheAccountTheLibraryTheExchanges {
    background-color: #FFF;
    padding: .5rem .5rem;
    border-radius: 0.5rem;
    margin-top: 1.5rem;
}

.h2OfWelcomeOfFirstName {
    font-weight: bold;
}

.divAboutTheAccountTheLibraryTheExchanges {
    display: flex;
    flex-direction: column;
    padding-left: 0.32em;
}

.divAboutTheAccountTheLibraryTheExchanges>h3 {
    color: #0854A2;
}

.linkManageMyAccount {
    display: flex;
    flex-direction: column;
    font-weight: bold;
}

.informationAboutTheAccountTheLibraryTheExchanges a {
    color: #000;
    text-decoration: none;
    padding-left: 0.65em;
    padding-bottom: 0.65em;
}

th,
td,
thead,
tbody>tr>th,
tbody>tr>td {
    text-align: center;
}

/* classes for validation form */
.valid {
    color: #0f5132;
}

.invalid {
    color: #842029;
}

.divUserIndex {
    margin: 1.5rem;
    padding: 1rem;
    background-color: #fff;
    border-radius: .25rem;
    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
}

.h2IntroductoryContent,
.h2MainHowItWorks,
.h2MainFrequentlyAskedQuestions,
.h2MainStateOfBook,
.formHeader h2,
.h2OfWelcomeOfFirstName,
.h2UserData,
.h2BookMyBooks,
.h2BookAuthor,
.h2UserIndex,
.h2BookHowMakeExchange,
.h2BookMyExchangeWishes,
.h2BookMyExchangeRequests,
.h2BookIndex,
.h2BookValidationConfirmExchange,
.h2BookConfirmExchange,
.h2ResetPasswordCheckEmail,
.h2MainSearchBooks {
    font-size: 1.1em;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.h2IntroductoryContent {
    color: #000000;
}

.h2MainHowItWorks,
.h2MainFrequentlyAskedQuestions,
.h2MainStateOfBook,
.h2MainSearchBooks {
    color: #0854A2;
    text-align: center;
}

p>a.linkMainHowItWorks {
    color: #000;
}

.h2UserData,
.h3UserData,
.h2UserIndex,
.h2BookMyBooks,
.h2BookAuthor,
.h2BookHowMakeExchange,
.h2BookMyExchangeWishes,
.h2BookMyExchangeRequests,
.h2BookIndex,
.h2BookValidationConfirmExchange,
.h2BookConfirmExchange,
.h2ResetPasswordCheckEmail {
    font-family: 'RobotoRegular', 'openSansRegular', Arial, sans-serif, serif;
    font-weight: 700;
    color: #186135;
    background-color: #F7F7F7;
    padding: 10px 20px;
    border-radius: 0.5rem;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
}

.h2UserData,
.h2BookMyBooks,
.h2BookAuthor,
.h2UserIndex,
.h2BookHowMakeExchange,
.h2BookMyExchangeWishes,
.h2BookMyExchangeRequests,
.h2BookIndex,
.h2BookValidationConfirmExchange,
.h2BookConfirmExchange,
.h2ResetPasswordCheckEmail {
    border: 0.04em solid #186135;
}

.h3UserData {
    padding: 10px 20px;
}

section.container.mainIndex>p.pIntroductoryContent {
    font-size: 0.83em;
    font-weight: bold;
    line-height: 1.6em;
    margin-left: 2%;
}

.divMainHowItWorks p,
.divMainFrequentlyAskedQuestions p,
.divMainFrequentlyAskedQuestions dl,
.divMainFrequentlyAskedQuestions dd,
.divMainStateOfBook p,
.divMainStateOfBook dl,
.divMainStateOfBook dd {
    font-family: 'MerriweatherRegular', 'openSansRegular', Arial, sans-serif, serif;
    color: #000;
}

.divMainFrequentlyAskedQuestions dd,
.divMainStateOfBook dd {
    margin-right: 5%;
}

.h3InstructionsForUse {
    color: #CD4109;
    font-size: 1em;
    margin-bottom: 0.5rem;
    margin-top: 0.5rem;
}

.instructionsForUse p {
    font-size: 0.9em;
    margin-left: 2%;
}

.divBookValidationConfirmExchange,
.divBookConfirmExchange {
    margin: 0 auto;
    border: 0.1em solid #186135;
    border-radius: 0.5rem;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    background-color: #F7F7F7;
    padding: 10px;
}

.divBookValidationConfirmExchange {
    width: 100%;
    text-align: center;
}

div.divBookValidationConfirmExchange>p>span {
    font-weight: bold
}

.divBookMyBooksEmptyLibrary,
.divBookMyExchangeWishes,
.divBookMyExchangeRequests,
.divResetPasswordCheckEmail {
    margin: 1.5rem auto;
    border-radius: 0.5rem;
    background-color: #0854A2;
    padding: 1rem;
}

.divResetPasswordCheckEmail {
    background-color: #F7F7F7;
}

.divBookMyBooksEmptyLibrary,
.divResetPasswordCheckEmail {
    width: 63.8%;
}

.divBookMyExchangeWishes,
.divBookMyExchangeRequests {
    width: 52.8%;
}

.divBookMyBooksEmptyLibrary p,
.divBookMyExchangeWishes p,
.divBookMyExchangeRequests p,
.divBookHowMakeExchange p,
.divBookConfirmExchange p {
    font-family: 'openSansRegular', Arial, sans-serif, serif;
    color: #000;
}

.divBookMyBooksEmptyLibrary p,
.divBookMyExchangeWishes p,
.divBookMyExchangeRequests p,
.divBookHowMakeExchange p,
p>a.linkBookHowMakeExchange {
    color: #FFF;
}

.divBookMyExchangeWishes p,
.divBookMyExchangeRequests p {
    margin: .5rem auto;
}

.imageForTheInstructionManualBlock {
    width: 100%;
    height: 144.1px;
}

.linkOnHowTheWebsiteWorks {
    display: inline-block;
    color: #000000;
    text-decoration: underline;
    margin-bottom: 1rem;
    margin-top: 1rem;
}

.h2TitleSelectionOfBooks {
    text-align: center;
    background-color: #F7F7F7;
    border-radius: 0.5rem;
    padding: 5px;
    font-size: 1.1em;
}

div#content.row.blockCard>div.card {
    flex: 0 0 auto;
    width: 100%;
    justify-content: center;
}
/* ... */

